--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This notebook provides a brief demonstration of the **midas** class in the Python programming environment, the software we have developed to implement MIDAS. We show how to use the class to multiply impute missing values in the Adult census dataset, the basis for our applied accuracy test.\n",
     "\n",
-    "To access the class, users must have TensorFlow installed as a **pip** package in their Python environment. We recommend creating a Conda environment before reinstalling TensorFlow to avoid conflicts with projects using later versions of the package. MIDAS is written in TensorFlow 1.X API; users of TensorFlow 2.X can install the correct version via the command line `pip install tensorflow==1.14.0`\n",
+    "To access the class, users must have TensorFlow installed as a **pip** package in their Python environment. MIDAS is written in TensorFlow 1.X API; users of TensorFlow 2.X can install the correct version via the command line `pip install tensorflow==1.14.0`. We recommend creating a Conda environment before reinstalling TensorFlow to avoid conflicts with projects using later versions of the package.\n",
     "\n",
     "\n",
     "Once these packages have been installed, users can import the dependencies and load the data:"
