--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ Installation
 ------------
 
 To install via pip, input the following command into the terminal:  
-`pip install git+https://github.com/ranjitlall/MIDAS.git`
+`pip install git+https://github.com/MIDASverse/MIDAS.git`
 
 
 MIDAS requires:
