update JN with preproc

--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -10,9 +10,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This notebook provides a brief demonstration of the **midas** class in the Python programming environment, the software we have developed to implement MIDAS. We show how to use the class to multiply impute missing values in the Adult census dataset, the basis for our applied accuracy test.\n",
+        "This notebook provides a brief demonstration of the **Midas** class in the Python programming environment, the software we have developed to implement MIDAS. We show how to use the class to multiply impute missing values in the Adult census dataset, the basis for our applied accuracy test.\n",
         "\n",
-        "To access the class, users must have TensorFlow installed as a **pip** package in their Python environment. MIDAS is written in TensorFlow 1.X API; users of TensorFlow 2.X can install the final v1 release via the command line `pip install tensorflow==1.15.0`. We recommend creating a Conda environment before reinstalling TensorFlow to avoid conflicts with projects using later versions of the package.\n",
+        "To access the class, users must have TensorFlow installed as a **pip** package in their Python environment. MIDAS is compatible with both TensorFlow 1.X and TensorFlow >= 2.2 versions.\n",
         "\n\nOnce these packages have been installed, users can import the dependencies and load the data:"
       ],
       "metadata": {}
@@ -24,15 +24,15 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import tensorflow as tf\n",
-        "from MIDASpy import Midas\n",
+        "import MIDASpy as md\n",
         "\n",
-        "data_0 = pd.read_csv('data/adult_data.csv')\n",
+        "data_0 = pd.read_csv('adult_data.csv')\n",
         "data_0.columns.str.strip()"
       ],
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 2,
+          "execution_count": 24,
           "data": {
             "text/plain": [
               "Index(['Unnamed: 0', 'age', 'workclass', 'fnlwgt', 'education',\n",
@@ -45,7 +45,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 2,
+      "execution_count": 24,
       "metadata": {}
     },
     {
@@ -72,13 +72,13 @@
         "data_0[spike_in == 1] = np.nan"
       ],
       "outputs": [],
-      "execution_count": 3,
+      "execution_count": 25,
       "metadata": {}
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Next, we list categorical variables in a vector and one-hot encode them using an inbuilt function in the pandas package:"
+        "Next, we list categorical variables in a vector and one-hot encode them using **MIDASpy**'s inbuilt preprocessing function `cat_conv`, which returns both the encoded data and a nested list of categorical column names we can pass to the imputation algorithm. To construct the final, pre-processed data we append the one-hot encoded categorical data to the non-cateogrical data, and replace null values with `np.nan` values:"
       ],
       "metadata": {}
     },
@@ -86,27 +86,18 @@
       "cell_type": "code",
       "source": [
         "categorical = ['workclass','marital_status','relationship','race','class_labels','sex','education','occupation','native_country']\n",
+        "data_cat, cat_cols_list = md.cat_conv(data_0[categorical])\n",
         "\n",
-        "data_1 = data_0[categorical]\n",
         "data_0.drop(categorical, axis = 1, inplace = True)\n",
-        "\n",
         "constructor_list = [data_0]\n",
-        "columns_list = []\n",
+        "constructor_list.append(data_cat)\n",
+        "data_in = pd.concat(constructor_list, axis=1)\n",
         "\n",
-        "for column in data_1.columns:\n",
-        "    na_temp = data_1[column].isnull()\n",
-        "    temp = pd.get_dummies(data_1[column], prefix = column)\n",
-        "    temp[na_temp] = np.nan\n",
-        "    constructor_list.append(temp)\n",
-        "    columns_list.append(list(temp.columns.values))\n",
-        "    \n",
-        "data_0 = pd.concat(constructor_list, axis=1)\n",
-        "\n",
-        "na_loc = data_0.isnull()\n",
-        "data_0[na_loc] = np.nan"
+        "na_loc = data_in.isnull()\n",
+        "data_in[na_loc] = np.nan"
       ],
       "outputs": [],
-      "execution_count": 4,
+      "execution_count": 26,
       "metadata": {}
     },
     {
@@ -119,7 +110,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(data_0.head())"
+        "print(data_in.head())"
       ],
       "outputs": [
         {
@@ -179,21 +170,21 @@
           ]
         }
       ],
-      "execution_count": 5,
+      "execution_count": 27,
       "metadata": {}
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The data are now ready to be fed into the midas algorithm, which involves three steps. First, we specify the dimensions, input corruption proportion, and other hyperparameters of the MIDAS neural network. Second, we build a MIDAS model based on the data. The vector of one-hot-encoded column names should be passed to the softmax_columns argument, as MIDAS employs a softmax final-layer activation function for categorical variables. Third, we train the model on the data, setting the number of training epochs as 20 in this example:"
+        "The data are now ready to be fed into the MIDAS algorithm, which involves three steps. First, we specify the dimensions, input corruption proportion, and other hyperparameters of the MIDAS neural network. Second, we build a MIDAS model based on the data. The vector of one-hot-encoded column names should be passed to the softmax_columns argument, as MIDAS employs a softmax final-layer activation function for categorical variables. Third, we train the model on the data, setting the number of training epochs as 20 in this example:"
       ],
       "metadata": {}
     },
     {
       "cell_type": "code",
       "source": [
-        "imputer = Midas(layer_structure = [256,256], vae_layer = False, seed = 89, input_drop = 0.75)\n",
-        "imputer.build_model(data_0, softmax_columns = columns_list)\n",
+        "imputer = md.Midas(layer_structure = [256,256], vae_layer = False, seed = 89, input_drop = 0.75)\n",
+        "imputer.build_model(data_in, softmax_columns = cat_cols_list)\n",
         "imputer.train_model(training_epochs = 20)"
       ],
       "outputs": [
@@ -207,42 +198,42 @@
             "\n",
             "Model initialised\n",
             "\n",
-            "Epoch: 0 , loss: 133848.50805376086\n",
-            "Epoch: 1 , loss: 95065.40653797715\n",
-            "Epoch: 2 , loss: 90628.25024318071\n",
-            "Epoch: 3 , loss: 85635.75156979542\n",
-            "Epoch: 4 , loss: 79943.5477344518\n",
-            "Epoch: 5 , loss: 76176.41991035591\n",
-            "Epoch: 6 , loss: 75168.03345590494\n",
-            "Epoch: 7 , loss: 73609.58660368713\n",
-            "Epoch: 8 , loss: 73962.98218317394\n",
-            "Epoch: 9 , loss: 73652.5491948159\n",
-            "Epoch: 10 , loss: 72959.83611860563\n",
-            "Epoch: 11 , loss: 73128.3418826282\n",
-            "Epoch: 12 , loss: 73564.0481312203\n",
-            "Epoch: 13 , loss: 73355.49027725159\n",
-            "Epoch: 14 , loss: 72929.31829857982\n",
-            "Epoch: 15 , loss: 72174.56946968689\n",
-            "Epoch: 16 , loss: 73270.2137865539\n",
-            "Epoch: 17 , loss: 71626.98738724095\n",
-            "Epoch: 18 , loss: 72509.55602243406\n",
-            "Epoch: 19 , loss: 72089.0846345634\n",
+            "Epoch: 0 , loss: 131061.55897771953\n",
+            "Epoch: 1 , loss: 94879.03236991112\n",
+            "Epoch: 2 , loss: 90927.99433900925\n",
+            "Epoch: 3 , loss: 88644.25104503706\n",
+            "Epoch: 4 , loss: 85632.2174963395\n",
+            "Epoch: 5 , loss: 80600.93999836173\n",
+            "Epoch: 6 , loss: 76585.74140164237\n",
+            "Epoch: 7 , loss: 75515.47067752703\n",
+            "Epoch: 8 , loss: 74397.19318722867\n",
+            "Epoch: 9 , loss: 73943.73610222293\n",
+            "Epoch: 10 , loss: 74009.57563943726\n",
+            "Epoch: 11 , loss: 74607.9188243621\n",
+            "Epoch: 12 , loss: 73648.4787952828\n",
+            "Epoch: 13 , loss: 73824.28025167923\n",
+            "Epoch: 14 , loss: 73013.18742640584\n",
+            "Epoch: 15 , loss: 73926.46652169684\n",
+            "Epoch: 16 , loss: 72989.6765536687\n",
+            "Epoch: 17 , loss: 73968.84397654202\n",
+            "Epoch: 18 , loss: 73285.7860169817\n",
+            "Epoch: 19 , loss: 73451.92790332159\n",
             "Training complete. Saving file...\n",
             "Model saved in file: tmp/MIDAS\n"
           ]
         },
         {
           "output_type": "execute_result",
-          "execution_count": 8,
+          "execution_count": 29,
           "data": {
             "text/plain": [
-              "<midas.midas_base.Midas at 0x1a32e33438>"
+              "<MIDASpy.midas_base.Midas at 0x7fc5292e25e0>"
             ]
           },
           "metadata": {}
         }
       ],
-      "execution_count": 8,
+      "execution_count": 29,
       "metadata": {}
     },
     {
@@ -267,11 +258,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "INFO:tensorflow:Restoring parameters from tmp/MIDAS\n",
             "Model restored.\n"
           ]
         }
       ],
-      "execution_count": 9,
+      "execution_count": 30,
       "metadata": {}
     }
   ],
@@ -283,7 +275,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.7.3",
+      "version": "3.8.3",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
