--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -10,7 +10,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This notebook provides a brief demonstration of the **Midas** class in the Python programming environment, the software we have developed to implement MIDAS. We show how to use the class to multiply impute missing values in the Adult census dataset, the basis for our applied accuracy test.\n",
+        "This notebook provides a brief demonstration of **MIDASpy**'s core functionalities. We show how to use the package to impute missing values in the Adult census dataset (which is commonly used for benchmarking in the machine learning literature).\n",
         "\n",
         "To access the class, users must have TensorFlow installed as a **pip** package in their Python environment. MIDAS is compatible with both TensorFlow 1.X and TensorFlow >= 2.2 versions.\n",
         "\n\nOnce these packages have been installed, users can import the dependencies and load the data:"
