--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -12,8 +12,8 @@
       "source": [
         "This notebook provides a brief demonstration of **MIDASpy**'s core functionalities. We show how to use the package to impute missing values in the Adult census dataset (which is commonly used for benchmarking in the machine learning literature).\n",
         "\n",
-        "Users of **MIDASpy** must have TensorFlow installed as a **pip** package in their Python environment. MIDAS is compatible with both TensorFlow 1.X and TensorFlow >= 2.2 versions.\n",
-        "\n\nOnce these packages have been installed, users can import the dependencies and load the data:"
+        "Users of **MIDASpy** must have **TensorFlow** installed as a **pip** package in their Python environment. MIDAS is compatible with both **TensorFlow** 1.X and **TensorFlow** >= 2.2 versions.\n",
+        "\n\nOnce these packages are installed, users can import the dependencies and load the data:"
       ],
       "metadata": {}
     },
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As the dataset has a very low proportion of missingness (one of the reasons we selected it for the accuracy test), we randomly set 5000 observed values as missing in each column:"
+        "As the Adult dataset has a very low proportion of missingness, we randomly set 5,000 observed values as missing in each column:"
       ],
       "metadata": {}
     },
@@ -103,7 +103,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "To visualise the results:\n"
+        "To visualize the results:\n"
       ],
       "metadata": {}
     },
@@ -239,7 +239,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Once training is complete, we can generate any number of imputed datasets using the generate_samples function (here we set M as 10). Users can then either write these imputations to separate .csv files or work with them directly in Python:"
+        "Once training is complete, we can generate any number of imputed datasets using the generate_samples function (here we set the number as 10). Users can then either write these imputations to separate .csv files or work with them directly in Python:"
       ],
       "metadata": {}
     },
