--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -239,7 +239,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Once training is complete, we can generate any number of imputed datasets using the generate_samples function (here we set the number as 10). Users can then either write these imputations to separate .csv files or work with them directly in Python:"
+        "Once training is complete, we can generate any number of imputed datasets (M) using the `generate_samples` function (here we set M as 10). Users can then either write these imputations to separate .CSV files or work with them directly in Python:"
       ],
       "metadata": {}
     },
