--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As the Adult dataset has a very low proportion of missingness, we randomly set 5,000 observed values as missing in each column:"
+        "As the Adult dataset has very little missingness, we randomly set 5,000 observed values as missing in each column:"
       ],
       "metadata": {}
     },
