add combine to JN

--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -32,7 +32,7 @@
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 24,
+          "execution_count": 1,
           "data": {
             "text/plain": [
               "Index(['Unnamed: 0', 'age', 'workclass', 'fnlwgt', 'education',\n",
@@ -45,7 +45,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 24,
+      "execution_count": 1,
       "metadata": {}
     },
     {
@@ -72,7 +72,7 @@
         "data_0[spike_in == 1] = np.nan"
       ],
       "outputs": [],
-      "execution_count": 25,
+      "execution_count": 3,
       "metadata": {}
     },
     {
@@ -97,7 +97,7 @@
         "data_in[na_loc] = np.nan"
       ],
       "outputs": [],
-      "execution_count": 26,
+      "execution_count": 4,
       "metadata": {}
     },
     {
@@ -120,21 +120,21 @@
             "   Unnamed: 0   age    fnlwgt  education_num  capital_gain  capital_loss  \\\n",
             "0         0.0  39.0   77516.0           13.0        2174.0           0.0   \n",
             "1         1.0  50.0   83311.0           13.0           0.0           0.0   \n",
-            "2         2.0  38.0  215646.0            9.0           0.0           0.0   \n",
-            "3         3.0  53.0  234721.0            NaN           0.0           0.0   \n",
-            "4         4.0  28.0       NaN           13.0           0.0           NaN   \n",
+            "2         2.0  38.0  215646.0            9.0           0.0           NaN   \n",
+            "3         3.0  53.0  234721.0            NaN           NaN           0.0   \n",
+            "4         NaN  28.0       NaN           13.0           0.0           NaN   \n",
             "\n",
             "   hours_per_week  workclass_Federal-gov  workclass_Local-gov  \\\n",
             "0            40.0                    0.0                  0.0   \n",
             "1            13.0                    0.0                  0.0   \n",
-            "2            40.0                    0.0                  0.0   \n",
+            "2            40.0                    NaN                  NaN   \n",
             "3            40.0                    0.0                  0.0   \n",
             "4             NaN                    0.0                  0.0   \n",
             "\n",
             "   workclass_Never-worked  ...  native_country_Portugal  \\\n",
             "0                     0.0  ...                      0.0   \n",
             "1                     0.0  ...                      0.0   \n",
-            "2                     0.0  ...                      0.0   \n",
+            "2                     NaN  ...                      0.0   \n",
             "3                     0.0  ...                      0.0   \n",
             "4                     0.0  ...                      0.0   \n",
             "\n",
@@ -170,7 +170,7 @@
           ]
         }
       ],
-      "execution_count": 27,
+      "execution_count": 5,
       "metadata": {}
     },
     {
@@ -198,42 +198,42 @@
             "\n",
             "Model initialised\n",
             "\n",
-            "Epoch: 0 , loss: 131061.55897771953\n",
-            "Epoch: 1 , loss: 94879.03236991112\n",
-            "Epoch: 2 , loss: 90927.99433900925\n",
-            "Epoch: 3 , loss: 88644.25104503706\n",
-            "Epoch: 4 , loss: 85632.2174963395\n",
-            "Epoch: 5 , loss: 80600.93999836173\n",
-            "Epoch: 6 , loss: 76585.74140164237\n",
-            "Epoch: 7 , loss: 75515.47067752703\n",
-            "Epoch: 8 , loss: 74397.19318722867\n",
-            "Epoch: 9 , loss: 73943.73610222293\n",
-            "Epoch: 10 , loss: 74009.57563943726\n",
-            "Epoch: 11 , loss: 74607.9188243621\n",
-            "Epoch: 12 , loss: 73648.4787952828\n",
-            "Epoch: 13 , loss: 73824.28025167923\n",
-            "Epoch: 14 , loss: 73013.18742640584\n",
-            "Epoch: 15 , loss: 73926.46652169684\n",
-            "Epoch: 16 , loss: 72989.6765536687\n",
-            "Epoch: 17 , loss: 73968.84397654202\n",
-            "Epoch: 18 , loss: 73285.7860169817\n",
-            "Epoch: 19 , loss: 73451.92790332159\n",
+            "Epoch: 0 , loss: 117256.53483883518\n",
+            "Epoch: 1 , loss: 86191.57900557012\n",
+            "Epoch: 2 , loss: 82235.14160604215\n",
+            "Epoch: 3 , loss: 80032.84553225857\n",
+            "Epoch: 4 , loss: 77202.56478397874\n",
+            "Epoch: 5 , loss: 72421.6698374017\n",
+            "Epoch: 6 , loss: 68203.67437592153\n",
+            "Epoch: 7 , loss: 67226.95568095717\n",
+            "Epoch: 8 , loss: 66277.40566796619\n",
+            "Epoch: 9 , loss: 65670.3376109672\n",
+            "Epoch: 10 , loss: 65726.79206258191\n",
+            "Epoch: 11 , loss: 66133.58962712719\n",
+            "Epoch: 12 , loss: 65309.62404327592\n",
+            "Epoch: 13 , loss: 65309.563779258475\n",
+            "Epoch: 14 , loss: 64963.398904342954\n",
+            "Epoch: 15 , loss: 65626.56983061825\n",
+            "Epoch: 16 , loss: 64806.52387842501\n",
+            "Epoch: 17 , loss: 65535.00585041571\n",
+            "Epoch: 18 , loss: 65120.4375428766\n",
+            "Epoch: 19 , loss: 65258.038586377785\n",
             "Training complete. Saving file...\n",
             "Model saved in file: tmp/MIDAS\n"
           ]
         },
         {
           "output_type": "execute_result",
-          "execution_count": 29,
+          "execution_count": 6,
           "data": {
             "text/plain": [
-              "<MIDASpy.midas_base.Midas at 0x7fc5292e25e0>"
+              "<MIDASpy.midas_base.Midas at 0x7fdc29165700>"
             ]
           },
           "metadata": {}
         }
       ],
-      "execution_count": 29,
+      "execution_count": 6,
       "metadata": {}
     },
     {
@@ -263,8 +263,104 @@
           ]
         }
       ],
-      "execution_count": 30,
+      "execution_count": 7,
       "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can then estimate *m* separate regression models and combine the parameter and variance estimates (see Rubin 1987) using **MIDASpy's** `combine` function:"
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = md.combine(y_var = \"capital_gain\", \n",
+        "                   X_vars = [\"education_num\",\"age\"],\n",
+        "                   df_list = imputations)\n",
+        "\nmodel"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 36,
+          "data": {
+            "text/plain": [
+              "            term   estimate   std.error  statistic          df   p.value\n",
+              "0          const -98.103910  100.060298  -0.980448  162.300742  0.328324\n",
+              "1  education_num  18.190052    3.836454   4.741371  403.771392  0.000003\n",
+              "2            age  20.059125    2.099022   9.556413  151.303420  0.000000"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>term</th>\n",
+              "      <th>estimate</th>\n",
+              "      <th>std.error</th>\n",
+              "      <th>statistic</th>\n",
+              "      <th>df</th>\n",
+              "      <th>p.value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>const</td>\n",
+              "      <td>-98.103910</td>\n",
+              "      <td>100.060298</td>\n",
+              "      <td>-0.980448</td>\n",
+              "      <td>162.300742</td>\n",
+              "      <td>0.328324</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>education_num</td>\n",
+              "      <td>18.190052</td>\n",
+              "      <td>3.836454</td>\n",
+              "      <td>4.741371</td>\n",
+              "      <td>403.771392</td>\n",
+              "      <td>0.000003</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>age</td>\n",
+              "      <td>20.059125</td>\n",
+              "      <td>2.099022</td>\n",
+              "      <td>9.556413</td>\n",
+              "      <td>151.303420</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 36,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
     }
   ],
   "metadata": {
