update combine JN

--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -269,7 +269,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can then estimate *m* separate regression models and combine the parameter and variance estimates (see Rubin 1987) using **MIDASpy's** `combine` function:"
+        "Finally, using the list of generated imputations, we can estimate M separate regression models and combine the parameter and variance estimates (see Rubin 1987) using **MIDASpy's** `combine` function:"
       ],
       "metadata": {}
     },
