--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -10,7 +10,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This notebook provides a brief demonstration of **MIDASpy**'s core functionalities. We show how to use the package to impute missing values in the Adult census dataset (which is commonly used for benchmarking in the machine learning literature).\n",
+        "This notebook provides a brief demonstration of **MIDASpy**'s core functionalities. We show how to use the package to impute missing values in the Adult census dataset(https://github.com/MIDASverse/MIDASpy/blob/master/adult.csv) (which is commonly used for benchmarking in the machine learning literature).\n",
         "\n",
         "Users of **MIDASpy** must have **TensorFlow** installed as a **pip** package in their Python environment. **MIDASpy** is compatible with both **TensorFlow** 1.X and **TensorFlow** >= 2.2 versions.\n",
         "\n\nOnce these packages are installed, users can import the dependencies and load the data:"
