--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -249,7 +249,7 @@
         "imputations = imputer.generate_samples(m=10).output_list \n",
         "\n",
         "# for i in imputations:\n",
-        "#    file_out = ``midas_imp_\" + str(n) + ``.csv\"\n",
+        "#    file_out = \"midas_imp_\" + str(n) + \".csv\"\n",
         "#    i.to_csv(file_out, index=False)\n",
         "#    n += 1"
       ],
